--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.7"
   }
